--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <i class="fas fa-bars"></i>
             </span>
           </div>
-          <ul class="main-nav" id="nav-menu">
+          <!-- <ul class="main-nav" id="nav-menu">
             <li>
               <a href="#how-we-met" class="nav-links">How We Met</a>
             </li>
@@ -49,7 +49,7 @@
             <li>
               <a href="#photo-gallery" class="nav-links">Photos</a>
             </li>
-          </ul>
+          </ul> -->
         </nav>
         <div class="page-intro">
           <div class="save-the-date">
