Added active class to the navbar

--- a/index.html
+++ b/index.html
@@ -96,29 +96,9 @@
         </div>
       </section>
       <section class="page-sections">
-        <div id="how-we-met" class="section-1">
-          <h2>TWO LOVE BIRDS MEET</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur
-            ratione fuga delectus nam ea similique aperiam optio sint eos magnam
-            odio, commodi quis ipsam tempora, fugit adipisci perspiciatis
-            excepturi officia. Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Et sit voluptatum maxime eius, porro corrupti
-            illum dolorem rem a dolores cum natus amet perferendis fuga mollitia
-            illo in tempore atque.
-          </p>
-
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quasi
-            eius incidunt ad velit, rerum sit quia iste consectetur numquam
-            fuga, possimus exercitationem consequatur dolores animi, sapiente
-            reprehenderit. Ut, perspiciatis.
-          </p>
-        </div>
-
-        <div class="section-2-flex">
-          <div id="wedding-party" class="section-2">
-            <h2>MEET THE GANG</h2>
+        <section class="sections" id="how-we-met">
+          <div class="section-1">
+            <h2>TWO LOVE BIRDS MEET</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               Aspernatur ratione fuga delectus nam ea similique aperiam optio
@@ -136,31 +116,58 @@
               sapiente reprehenderit. Ut, perspiciatis.
             </p>
           </div>
-        </div>
+        </section>
 
-        <div id="registry" class="section-3">
-          <h2>WE KNOW YOU WOULD LOVE TO SEND GIFTS</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur
-            ratione fuga delectus nam ea similique aperiam optio sint eos magnam
-            odio, commodi quis ipsam tempora, fugit adipisci perspiciatis
-            excepturi officia. Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Et sit voluptatum maxime eius, porro corrupti
-            illum dolorem rem a dolores cum natus amet perferendis fuga mollitia
-            illo in tempore atque.
-          </p>
+        <section class="sections" id="wedding-party">
+          <div class="section-2-flex">
+            <div class="section-2">
+              <h2>MEET THE GANG</h2>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Aspernatur ratione fuga delectus nam ea similique aperiam optio
+                sint eos magnam odio, commodi quis ipsam tempora, fugit adipisci
+                perspiciatis excepturi officia. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Et sit voluptatum maxime eius,
+                porro corrupti illum dolorem rem a dolores cum natus amet
+                perferendis fuga mollitia illo in tempore atque.
+              </p>
 
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque quasi
-            eius incidunt ad velit, rerum sit quia iste consectetur numquam
-            fuga, possimus exercitationem consequatur dolores animi, sapiente
-            reprehenderit. Ut, perspiciatis.
-          </p>
-        </div>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+                quasi eius incidunt ad velit, rerum sit quia iste consectetur
+                numquam fuga, possimus exercitationem consequatur dolores animi,
+                sapiente reprehenderit. Ut, perspiciatis.
+              </p>
+            </div>
+          </div>
+        </section>
+
+        <section class="sections" id="registry">
+          <div class="section-3">
+            <h2>WE KNOW YOU WOULD LOVE TO SEND GIFTS</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+              Aspernatur ratione fuga delectus nam ea similique aperiam optio
+              sint eos magnam odio, commodi quis ipsam tempora, fugit adipisci
+              perspiciatis excepturi officia. Lorem ipsum dolor sit amet
+              consectetur adipisicing elit. Et sit voluptatum maxime eius, porro
+              corrupti illum dolorem rem a dolores cum natus amet perferendis
+              fuga mollitia illo in tempore atque.
+            </p>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque
+              quasi eius incidunt ad velit, rerum sit quia iste consectetur
+              numquam fuga, possimus exercitationem consequatur dolores animi,
+              sapiente reprehenderit. Ut, perspiciatis.
+            </p>
+          </div>
+        </section>
       </section>
-      <section>
+
+      <section class="sections" id="photo-gallery">
         <h1 class="photo-head">PHOTO GALLERY</h1>
-        <div id="photo-gallery" class="photo-gallery">
+        <div class="photo-gallery">
           <figure>
             <img
               class="img-img"
